// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath="/suppliers/1234/avatar"
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
    <div
      to="/suppliers/1234/edit"
    >
      <button
        className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-117"
        >
          Editar perfil
        </span>
        <span
          className="MuiTouchRipple-root-135"
        />
      </button>
    </div>
    <div
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-117"
        >
          Responder questionários
        </span>
        <span
          className="MuiTouchRipple-root-135"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-143 MuiPaper-elevation2-147 MuiPaper-rounded-144 MuiCard-root-142"
    >
      <div
        className="MuiCardContent-root-170"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Telefone
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            0000-0000
          </h3>
        </div>
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/suppliers/1234/messages/new"
        >
          <button
            className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginTop": 16,
              }
            }
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-117"
            >
              Enviar mensagem
            </span>
            <span
              className="MuiTouchRipple-root-135"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  >
    <h1
      className="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorTextSecondary-114"
      style={
        Object {
          "display": "inline-block",
          "marginBottom": 32,
        }
      }
    >
      Materiais
    </h1>
    <div
      style={
        Object {
          "display": "inline-block",
          "float": "right",
          "textDecoration": "none",
        }
      }
      to="/suppliers/1234/materials/new"
    >
      <button
        className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-117"
        >
          Cadastrar material
        </span>
        <span
          className="MuiTouchRipple-root-135"
        />
      </button>
    </div>
  </div>
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    currentUser={
      Object {
        "id": 1234,
        "suppliers": Array [
          Object {
            "id": 1234,
          },
        ],
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`with materials renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath={undefined}
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
    <div
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-117"
        >
          Responder questionários
        </span>
        <span
          className="MuiTouchRipple-root-135"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-143 MuiPaper-elevation2-147 MuiPaper-rounded-144 MuiCard-root-142"
    >
      <div
        className="MuiCardContent-root-170"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-92 MuiTypography-body1-101 MuiTypography-colorInherit-111"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  >
    <h1
      className="MuiTypography-root-92 MuiTypography-headline-97 MuiTypography-colorTextSecondary-114"
      style={
        Object {
          "display": "inline-block",
          "marginBottom": 32,
        }
      }
    >
      Materiais
    </h1>
    <div
      cellheight={360}
      className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
    >
      <div
        ignoreHighlights={true}
        material={
          Object {
            "id": 1,
          }
        }
      >
        Card
      </div>
      <div
        ignoreHighlights={true}
        material={
          Object {
            "id": 2,
          }
        }
      >
        Card
      </div>
      <div
        ignoreHighlights={true}
        material={
          Object {
            "id": 3,
          }
        }
      >
        Card
      </div>
    </div>
  </div>
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`without currentUser renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath={undefined}
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
    <div
      to="/suppliers/1234/questionnaires"
    >
      <button
        className="MuiButtonBase-root-132 MuiButton-root-116 MuiButton-raised-122 MuiButton-raisedPrimary-123"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-117"
        >
          Responder questionários
        </span>
        <span
          className="MuiTouchRipple-root-135"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-143 MuiPaper-elevation2-147 MuiPaper-rounded-144 MuiCard-root-142"
    >
      <div
        className="MuiCardContent-root-170"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-92 MuiTypography-body1-101 MuiTypography-colorInherit-111"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  />
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;
